added some utilities